# solovay_strassen

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  prime.rs
