[package]
name = "solovay_strassen"
description = "A simple implementation of the Solovay-Strassen primality test."
version = "0.1.2"

authors = ["cjayross <calvinjayross@gmail.com>"]
edition = "2018"

repository = "https://github.com/cjayross/solovay_strassen"

license = "MIT"
keywords = ["solovay", "strassen", "prime", "primality", "test"]
categories = ["cryptography", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.7.0"
rayon = "~1.2.1"
