[package]
name = "solovay_strassen"
description = "A simple implementation of the Solovay-Strassen primality test."
version = "0.1.5"

authors = ["cjayross <calvinjayross@gmail.com>"]
edition = "2018"

repository = "https://github.com/cjayross/solovay_strassen"

license = "MIT"
keywords = ["solovay", "strassen", "prime", "primality", "test"]
categories = ["cryptography", "mathematics"]

[dependencies]
rayon = "1.2.1"
rand = "0.5"
num-traits = "0.2"
num-integer = "0.1"

[dependencies.num-bigint]
version = "0.2"
features = ["rand"]
